[package]
name = "mesai"
version = "0.1.0"
edition = "2021"
description = "Basit çalışma takip uygulaması: sayaç, oturum kayıtları, ekler ve dışa aktarma"

[dependencies]
# eframe/egui: saf Rust GUI. winit üzerinden Wayland'ı doğrudan (native) konuşur,
# WAYLAND_DISPLAY varsa Wayland'ı tercih eder, yoksa X11'e düşer.
eframe = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 2
strip = true
